# snow

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  compile_flags.txt
include/core/: utils.h
include/net/: client.h  packet.h  server.h
src/: main.cpp
src/core/: serializable.hpp  utils.cpp  utils.hpp
src/net/: client.cpp  client.hpp  packet.cpp  packet.hpp  server.cpp  server.hpp
